--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -1,7 +1,8 @@
 <ion-side-menus enable-menu-with-back-views="false">
   <ion-side-menu-content>
     <ion-nav-bar class="bar bar-assertive">
-      <ion-nav-back-button>
+     <ion-nav-back-button class="button-clear">
+        <i class="ion-arrow-left-c"></i>
       </ion-nav-back-button>
 
       <ion-nav-buttons side="left">
@@ -21,6 +22,11 @@
         <ion-item menu-close ng-click="logout()">
           Logout
         </ion-item>
+
+        <ion-item menu-close ng-click="getOnlineUsers()">
+          Users
+        </ion-item>
+
       </ion-list>
     </ion-content>
   </ion-side-menu>
